Using SCSS preprocessor

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,10 +3,10 @@
     src: url('fonts/Honk.ttf');
 }
 
-ul {
+/* ul {
     background: #f00 !important;
     
-}
+} */
 
 h1 {
     font-family: Honk;
